[Feat-API Gateway]: Add Swagger Chat Service
